2024-10-07  Iñaki Ucar  <iucar@fedoraproject.org>

	* inst/include/Rcpp/platform/compiler.h: Uncomment HAS_VARIADIC_TEMPLATES
	macro definition
	* src/api.cpp: Simplify checks for variadic templates
	* inst/include/Rcpp/DataFrame.h: Idem
	* inst/include/Rcpp/DottedPair.h: Idem
	* inst/include/Rcpp/Function.h: Idem
	* inst/include/Rcpp/InternalFunctionWithStdFunction.h: Idem
	* inst/include/Rcpp/Language.h: Idem
	* inst/include/Rcpp/Pairlist.h: Idem
	* inst/include/Rcpp/grow.h: Idem
	* inst/include/Rcpp/internal/call.h: Idem
	* inst/include/Rcpp/module/class.h: Idem
	* inst/include/Rcpp/traits/index_sequence.h: Idem
	* inst/include/Rcpp/traits/named_object.h: Idem
	* inst/include/Rcpp/vector/Vector.h: Idem
	* inst/include/Rcpp/Module.h: Idem + add missing is_void method
	* inst/tinytest/test_module.R: Add test for void functions and methods

2024-10-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version to 1.0.13.3
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

2024-09-29  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/vector/Vector.h: Remove a cast as R_xlen_t
	is returned now

2024-09-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

2024-09-12  Iñaki Ucar  <iucar@fedoraproject.org>

	* vignettes/.gitignore: Refinement to ignore more files under rmd/
	* vignettes/pdf/*: Rebuilt with Ghostscript 10.03.1
	* vignettes/*.pdf: Idem

2024-08-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-08-28  Dirk Eddelbuettel  <edd@debian.org>

	* R/Rcpp.package.skeleton.R: Create DESCRIPTION with Auhors@R file
	* inst/tinytest/test_rcpp_package_skeleton.R: Adjust tests

2024-08-20  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_sugar.R: Skip one more NA related test on arm64
	and macOS as failure is seen at r-universe on arm64
